--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="next">Next</string>
     <string name="submit">Submit</string>
     <string name="items">Food Items Separated With (,)</string>
+    <string name="default_user">Default User</string>
 </resources>
