--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="submit">Submit</string>
     <string name="items">Food Items Separated With (,)</string>
     <string name="default_user">Default User</string>
+    <string name="logout">logout</string>
 </resources>
